test/parallel/forall/vass/const-errors-due-to-intents.good
const-errors-due-to-intents.chpl:10: error: illegal lvalue in assignment
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i1' is constant due to forall intents in this loop
const-errors-due-to-intents.chpl:11: error: illegal lvalue in assignment
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i2' is constant due to forall intents in this loop
const-errors-due-to-intents.chpl:12: error: illegal lvalue in assignment
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i3' is constant due to forall intents in this loop
const-errors-due-to-intents.chpl:13: error: illegal lvalue in assignment
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i4' is constant due to forall intents in this loop
const-errors-due-to-intents.chpl:14: error: non-lvalue actual is passed to 'ref' formal 'arg' of useit()
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i1' is constant due to forall intents in this loop
const-errors-due-to-intents.chpl:15: error: non-lvalue actual is passed to 'ref' formal 'arg' of useit()
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i2' is constant due to forall intents in this loop
const-errors-due-to-intents.chpl:16: error: non-lvalue actual is passed to 'ref' formal 'arg' of useit()
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i3' is constant due to forall intents in this loop
const-errors-due-to-intents.chpl:17: error: non-lvalue actual is passed to 'ref' formal 'arg' of useit()
const-errors-due-to-intents.chpl:9: note: The shadow variable 'i4' is constant due to forall intents in this loop
